syntax = "proto3";

option java_multiple_files = true;
option java_package = "cliregstubs";

package cliregservice; // package do proto

// serviço com operações sobre números
service ClientRegisterService {

  rpc getServer(Void) returns (Result);

}

message Void {

}

message Result {
  string Id = 1;
  string Ip = 2;
  int32 port =3;
}