syntax = "proto3";

option java_multiple_files = true;
option java_package = "imagestubs";

package imageservice; // package do proto

// serviço com operações sobre números
service ProcessImageService {

  rpc uploadImage(stream Reply) returns (ImageId);

  rpc downloadImage(ImageId) returns (stream Image);

}

message Reply {
  string Id = 1;
  string name = 2;
  bytes imgContent = 3;
  repeated string keywords = 4;
}

message ImageId {
  string hash = 1;
}

message Image {
  string Id = 1;
  string name = 2;
  optional bytes markedImage = 3;
}